zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_focus_previous_pane_action-3.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 968
expression: "format!(\"{:?}\", cursor_coordinates)"
---
Some((41, 1))
