zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_focus_previous_pane_action-4.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 970
expression: "format!(\"{}\", snapshot_count)"
---
3
