zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_go_to_next_and_previous_search_occurrence.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 2674
expression: "format!(\"{:?}\", * received_server_instructions.lock().unwrap())"
---
[Render(Some({1: "\u{1b}[?25l\u{1b}[2J\u{1b}[1;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m┌ Pane #1 ─────────────────────────────────────────────────────────────────────┐\u{1b}[2;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[2;80H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[3;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[3;80H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[4;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[4;80H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[5;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m└──────────────────────────────────────────────────────────────────────────────┘\u{1b}[2;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                                                              \u{1b}[3;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                                                              \u{1b}[4;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                                                              \u{1b}[6;1H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m┌ Pane #2 ─────────────────────────────────────────────────────────────────────┐\u{1b}[7;1H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[7;80H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[8;1H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[8;80H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[9;1H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[9;80H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[10;1H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m└──────────────────────────────────────────────────────────────────────────────┘\u{1b}[7;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                                                              \u{1b}[8;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                                                              \u{1b}[9;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                                                              \u{1b}]0;Zellij (zellij-test) - Pane #1\u{7}\u{1b}[1;1H\u{1b}[m\u{1b}[6;1H\u{1b}[m\u{1b}[?25h\u{1b}[2;2H\u{1b}[m\u{1b}[0 q"})), UnblockInputThread, Render(Some({1: "\u{1b}[?25l\u{1b}]0;Zellij (zellij-test) - Pane #1\u{7}\u{1b}[?25h\u{1b}[2;2H\u{1b}[m\u{1b}[0 q"})), Render(Some({1: "\u{1b}[?25l\u{1b}[2J\u{1b}[1;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m┌ Pane #1 ─────────────────────────────┐\u{1b}[2;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[2;40H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[3;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[3;40H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[4;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[4;40H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[5;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[5;40H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[6;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[6;40H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[7;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[7;40H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[8;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[8;40H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[9;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[9;40H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[10;1H\u{1b}[m\u{1b}[38;5;0m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m└──────────────────────────────────────┘\u{1b}[2;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[3;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[4;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[5;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[6;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[7;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[8;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[9;2H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[1;41H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m┌ Pane #2 ─────────────────────────────┐\u{1b}[2;41H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[2;80H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[3;41H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[3;80H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[4;41H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[4;80H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[5;41H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[5;80H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[6;41H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[6;80H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[7;41H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[7;80H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[8;41H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[8;80H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[9;41H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[9;80H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m│\u{1b}[10;41H\u{1b}[m\u{1b}[39m\u{1b}[49m\u{1b}[29m\u{1b}[28m\u{1b}[27m\u{1b}[25m\u{1b}[25m\u{1b}[1m\u{1b}[24m\u{1b}[23m└──────────────────────────────────────┘\u{1b}[2;42H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[3;42H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[4;42H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[5;42H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[6;42H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[7;42H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[8;42H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}[9;42H\u{1b}[m\u{1b}[m\u{1b}]8;;\u{1b}\\                                      \u{1b}]0;Zellij (zellij-test) - Pane #1\u{7}\u{1b}[1;1H\u{1b}[m\u{1b}[1;41H\u{1b}[m\u{1b}[?25h\u{1b}[2;2H\u{1b}[m\u{1b}[0 q"})), UnblockInputThread, Render(Some({1: "\u{1b}[?25l\u{1b}]0;Zellij (zellij-test) - Pane #1\u{7}\u{1b}[?25h\u{1b}[2;2H\u{1b}[m\u{1b}[0 q"})), Render(Some({1: "\u{1b}[?25l\u{1b}]0;Zellij (zellij-test) - Pane #1\u{7}\u{1b}[1;1H\u{1b}[m\u{1b}[?25h\u{1b}[2;2H\u{1b}[m\u{1b}[0 q"})), Render(Some({1: "\u{1b}[?25l\u{1b}]0;Zellij (zellij-test) - Pane #1\u{7}\u{1b}[1;1H\u{1b}[m\u{1b}[?25h\u{1b}[2;2H\u{1b}[m\u{1b}[0 q"})), Render(Some({1: "\u{1b}[?25l\u{1b}]0;Zellij (zellij-test) - Pane #1\u{7}\u{1b}[1;1H\u{1b}[m\u{1b}[?25h\u{1b}[2;2H\u{1b}[m\u{1b}[0 q"})), KillSession]
