zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_half_page_scroll_down_action-5.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", snapshot)"
---
00 (C):               Pane #1  [ SCROLL: 4/12 ]│                 Pane #2                
01 (C): fill pane up with something 8          │                                        
02 (C): fill pane up with something 9          │                                        
03 (C): fill pane up with something 10         │                                        
04 (C): fill pane up with something 11         │                                        
05 (C): fill pane up with something 12         │                                        
06 (C): fill pane up with something 13         │                                        
07 (C): fill pane up with something 14         │                                        
08 (C): fill pane up with something 15         │                                        
09 (C): fill pane up with something 16         │
